--- a/front/package.json
+++ b/front/package.json
@@ -13,7 +13,9 @@
     "clsx": "^2.1.1",
     "next": "15.4.4",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-draggable": "^4.5.0",
+    "react-resizable": "^3.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
