--- a/front/package.json
+++ b/front/package.json
@@ -15,13 +15,16 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-draggable": "^4.5.0",
-    "react-resizable": "^3.0.5"
+    "react-resizable": "^3.0.5",
+    "react-rnd": "^10.5.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-resizable": "^3.0.8",
+    "axios": "^1.11.0",
     "eslint": "^9",
     "eslint-config-next": "15.4.4",
     "typescript": "^5"
